--- a/Website/Website/Resources/ResourceAdmin.resx
+++ b/Website/Website/Resources/ResourceAdmin.resx
@@ -216,6 +216,9 @@
   <data name="AdminFunctionActionColumnHeaderText" xml:space="preserve">
     <value>Thao tác</value>
   </data>
+  <data name="AdminFunctionBackButtonText" xml:space="preserve">
+    <value>Quay lại</value>
+  </data>
   <data name="AdminFunctionCreateButtonText" xml:space="preserve">
     <value>Tạo mới</value>
   </data>
